--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -72,7 +72,7 @@
       top: -50%;
       width: 70px;
       height: 70px;
-      background: green;
+      background: rgb(13, 199, 13);
       border-radius: 50%;
       border: 6px solid white;
       transition: 0.5s;
