--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -4,7 +4,7 @@
   height: 70px;
   bottom: 0;
   left: 0;
-  background: gray;
+  background: rgb(192, 189, 189);
   display: flex;
   align-items: center;
   justify-content: center;
