--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,15 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #333;
+}
+
+.comp {
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 50px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
