--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -4,7 +4,7 @@
   height: 70px;
   bottom: 0;
   left: 0;
-  background: rgb(192, 189, 189);
+  background: rgb(255, 255, 255);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -72,9 +72,9 @@
       top: -50%;
       width: 70px;
       height: 70px;
-      background: rgb(13, 199, 13);
+      background: rgb(36, 255, 36);
       border-radius: 50%;
-      border: 6px solid white;
+      border: 6px solid #333;
       transition: 0.5s;
 
       &::before {
