--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ body {
   height: 100vh;
   width: 100%;
   text-align: center;
-  margin: 0 auto;
-  font-size: 50px;
+  line-height: 75vh;
+  font-size: 100px;
   font-weight: 600;
   text-transform: uppercase;
   color: #fff;
