--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@ body {
   text-transform: uppercase;
   color: #fff;
 }
+
+@media screen and (max-width: 500px) {
+  .comp {
+    font-size: 70px;
+  }
+}
